--- a/include/styles2.css
+++ b/include/styles2.css
@@ -5,15 +5,21 @@ table.meniu {
 }
 
 table.center {
-    margin-left:auto; 
-    margin-right:auto;
+    margin-left:5%; 
+    margin-right:5%;
     margin-bottom: 0px;
     margin-top: 0px;
     border-width: 3px;
     border-style: solid;
     border-color: black;
     padding: 1px;
-    background-color: #999966;                
+    width:90%
+}
+
+table.center{
+    position: absolute;
+    background-color: #999966;   
+    z-index: -5;
 }
 table.backlink {  
     margin-left:auto; 
@@ -67,4 +73,31 @@ input.s1 {
 .scroll-table{
        height: 50px;
        overflow: auto;
+}
+
+.pazymys{
+    width: 20px;
+}
+
+table {
+  overflow: hidden;
+}
+
+.table tr:hover {
+  background-color: #ffa;
+}
+
+.table td, .table th {
+  position: relative;
+}
+.table td:hover::after,
+.table th:hover::after {
+  content: "";
+  position: absolute;
+  background-color: #ffa;
+  left: 0;
+  top: -5000px;
+  height: 10000px;
+  width: 100%;
+  z-index: -1;
 }
