--- a/include/styles2.css
+++ b/include/styles2.css
@@ -5,22 +5,18 @@ table.meniu {
 }
 
 table.center {
-    margin-left:5%; 
-    margin-right:5%;
+    margin-left:auto; 
+    margin-right:auto;
     margin-bottom: 0px;
     margin-top: 0px;
     border-width: 3px;
     border-style: solid;
     border-color: black;
     padding: 1px;
-    width:90%
+    background-color: #999966;
 }
 
-table.center{
-    position: absolute;
-    background-color: #999966;   
-    z-index: -5;
-}
+
 table.backlink {  
     margin-left:auto; 
     margin-right:auto;
@@ -83,21 +79,3 @@ table {
   overflow: hidden;
 }
 
-.table tr:hover {
-  background-color: #ffa;
-}
-
-.table td, .table th {
-  position: relative;
-}
-.table td:hover::after,
-.table th:hover::after {
-  content: "";
-  position: absolute;
-  background-color: #ffa;
-  left: 0;
-  top: -5000px;
-  height: 10000px;
-  width: 100%;
-  z-index: -1;
-}
