--- a/include/styles2.css
+++ b/include/styles2.css
@@ -1,7 +1,7 @@
 table.meniu {
     text-align: center;
-    background-color:#ff9933;
-    border:3px solid black;
+    background-color:#99ff99;
+    border:1000px solid black;
 }
 
 table.center {
@@ -85,7 +85,7 @@ table {
 div.tab {
     overflow: hidden;
     border: 1px solid #ccc;
-    background-color: #f1f1f1;
+    background-color: #222222;
 }
 
 /* Style the buttons inside the tab */
@@ -98,16 +98,17 @@ div.tab button {
     padding: 14px 16px;
     transition: 0.3s;
     font-size: 17px;
+     color: white;
 }
 
 /* Change background color of buttons on hover */
 div.tab button:hover {
-    background-color: #ddd;
+    background-color: #404040;
 }
 
 /* Create an active/current tablink class */
 div.tab button.active {
-    background-color: #ccc;
+    background-color: #4CAF50;
 }
 
 /* Style the tab content */
@@ -116,4 +117,7 @@ div.tab button.active {
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
+}
+h1 {
+    color:white;
 }
